syntax = "proto3";

option go_package = "me.mozhengxi.armyant/proto/service";
option java_multiple_files = true;
option java_package = "me.mozhengxi.armyant.proto.service";
option java_outer_classname = "ProtoService";

package grpc;

import "google/protobuf/timestamp.proto";

// The greeting service definition.
service Greeter {
  // Broker server
  rpc WorkerRegister (RegisterRequest) returns (RegisterResponse) {}
  rpc TaskResult (TaskResultRequest) returns (TaskResultResponse) {}

  // Worker server
  rpc Task (TaskRequest) returns (TaskResponse) {}
  rpc StopTask (StopTaskRequest) returns (StopTaskResponse) {}
}

/**
* Worker register
*/
enum WorkerType {
  LOCAL = 0;
  IDC = 1;
  REMOTE = 2;
}
message RegisterRequest {
  string auth = 1;
  WorkerType worker_type = 4;
  string content = 8;
  string worker_link = 10;
  string worker_label = 11;
  string worker_version = 14;
  google.protobuf.Timestamp create_at = 16;
}
message RegisterResponse {
  string broker_id = 1;
  string worker_id = 4;
  string broker_link = 8;
  google.protobuf.Timestamp create_at = 12;
}

/**
* Task Result
*/
message TaskResultRequest {
  string  task_name = 4;
  string  task_remark = 5;
  string  task_id = 6;
  string  instance_id = 7;
  string  broker_id = 8;
  string  worker_id = 10;
  int32   status = 11;
  int64   type = 12;
  string  result = 13;
  google.protobuf.Timestamp start_at = 14;
  google.protobuf.Timestamp end_at = 16;
}
message TaskResultResponse {
  int32 code = 10;
  string msg = 12;
}

/**
* Send Task
*/

message TaskRequest {
  string  task_name = 4;
  string  task_remark = 5;
  string  instance_id = 10;
  string  task_id = 11;
  int64   type = 12;
  string  cron = 13;
  string  broker_id = 14;
  string  worker_id = 16;
  DNA dna = 20;
}
message DNA {
  Command cmd = 10;
  string version = 12;
}
message Command {
  string app = 10;
  repeated string args = 14;
  repeated string env = 16;
  string dir = 18;
}
message TaskResponse {
  int32 status = 10;
  int32 entry_id = 11;
  string msg = 12;
}

/**
* Stop Task
 */
message StopTaskRequest {
  string id = 10;
  string broker_id = 14;
  string worker_id = 16;
  int32  entry_id = 18;
}
message StopTaskResponse {
  int32   status = 10;
  string  msg = 12;
}